# deken

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .mkdocs.yml  .tclint  .travis.yml  LICENSE.txt  Makefile  README.deken.pd  README.md  README.plugin.txt  config.md  deken  deken-plugin.tcl  deken.hy  deken.pd  mkdocs.yml  plugin-config.md  requirements.txt
.git-ci/: .readthedocs.yaml  appveyor.yml  git-version  gitlab-iem.yml  requirements.brew
.git-ci/deken-test/: README.deken.txt
deken-extra-plugins/: deken-xtra-apt-helper.py  deken-xtra-apt-plugin.tcl
deken-test/: README.deken.txt
developer/: DEVELOPMENT.md  Dockerfile  NOTES.md  README.md  builder.md  coverage.sh  deken  deken.hy  deken.py  deken.spec  pydeken.py  pyproject.toml  release.sh  requirements.txt  setup.py
developer/installer/: deken.spec  hook-elftools.py  hook-hy.py  hook-macholib.py
developer/server/: README.md  puredata_info.py  puredata_info_list.py
developer/server/proxy/: DekenServer.py  README.md  librarysearch.py  librarywatch.py  objectsearch.py  utilities.py
developer/server/proxy/data/: fetch.sh
developer/server/proxy/data/objects/: iemnet-v0.2.1-objects.txt  tof-v0.2.0-objects.txt
developer/src/deken/: __main__.py
developer/windows/: deken.bat
docs/: arch-specifiers.md  cmdline.md  index.md  requirements.txt
server/: puredata_info.py
windows/: deken-windows.py  deken.bat
