[project]
name = "deken"
authors = [
  { name="IOhannes m zmölnig", email="zmoelnig@iem.at" },
  { name="Chris McCormick", email="chris@mccormick.cx" },
]
description = "Pure Data package manager - cmdline tools"
readme = "README.md"
license = "BSD-3-Clause"

requires-python = ">=3.12"
dependencies = [
    "hy",
    "easywebdav2",
    "keyring",
    "macholib",
    "pefile",
    "pyelftools",
    "python-gnupg",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Software Distribution",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pure-data/deken"
Documentation = "https://deken.readthedocs.io/"
Repository = "https://github.com/devtools/deken.git"
Issues = "https://github.com/pure-data/deken/issues"


[project.scripts]
deken = "deken.__main__:_main"


[build-system]
requires = ["setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"deken" = ["*.hy"]


[tool.setuptools_scm]
version_file = "src/deken/_version.py"
root = ".."